# functional-roastery

./: .gitignore  Makefile  Procfile  README.md  app.json  elm-package.json  functional-roastery.cabal  servant-elm-poc.cabal
backend/: Api.hs  Auth.hs  Config.hs  Main.hs  MigrateUnsafe.hs  Model.hs  UrlHelpers.hs
backend/Api/: Account.hs  Batch.hs  Customer.hs  Order.hs  Purchase.hs  Storage.hs  Tools.hs  User.hs
backend/Config/: DbConfig.hs  DbUrl.hs
backend/Model/: Cat.hs  ModelHelpers.hs  User.hs  Variety.hs
backend/Model/Account/: Class.hs
backend/Model/Transaction/: Class.hs
backend/Test/: RoundTrip.hs  Test.hs
frontend/: Api.elm  Auth.elm  Command.elm  Init.elm  Main.elm  Message.elm  Model.elm  Route.elm  Update.elm  View.elm
frontend/Pages/: Customers.elm  Home.elm  Login.elm  NotFound.elm  Orders.elm  Storages.elm  Varieties.elm
frontend/Styles/: Classes.elm  Colors.elm  Styles.elm
static/: index.html
