name:               functional-roastery
version:            1.0
build-type:         Simple
cabal-version:      >= 1.20

executable functional-roastery
  main-is:            backend/Main.hs
  default-language:   Haskell2010
  default-extensions: DataKinds,
                      DeriveGeneric,
                      OverloadedStrings,
                      TypeFamilies,
                      TypeOperators
  ghc-options:        -O2 -Wall -Werror -threaded -ibackend
  build-depends:      base,
                      aeson,
                      bytestring,
                      esqueleto,
                      servant,
                      servant-server,
                      parsec,
                      persistent,
                      persistent-template,
                      persistent-sqlite,
                      persistent-postgresql,
                      pwstore-fast,
                      regex-posix,
                      string-conversions,
                      monad-logger,
                      stm,
                      text,
                      time,
                      transformers,
                      unordered-containers,
                      wai,
                      warp
