name:               functional-roastery
version:            1.0
build-type:         Simple
cabal-version:      >= 1.20

executable functional-roastery
  main-is:            Main.hs
  hs-source-dirs:     backend
  other-modules:      Api
                    , Api.Account
                    , Api.Batch
                    , Api.Customer
                    , Api.Order
                    , Api.Purchase
                    , Api.Storage
                    , Api.User
                    , Config
                    , Config.DbConfig
                    , Config.DbUrl
                    , Model
                    , Model.ModelHelpers
                    , Auth
  default-language:   Haskell2010
  default-extensions: DataKinds,
                      DeriveGeneric,
                      OverloadedStrings,
                      TypeFamilies,
                      TypeOperators
  ghc-options:        -O2 -Wall -Werror -threaded -ibackend
  build-depends:      base,
                      aeson,
                      bytestring,
                      esqueleto,
                      servant,
                      servant-server,
                      parsec,
                      persistent,
                      persistent-template,
                      persistent-sqlite,
                      persistent-postgresql,
                      pwstore-fast,
                      regex-posix,
                      string-conversions,
                      monad-logger,
                      stm,
                      text,
                      time,
                      transformers,
                      unordered-containers,
                      wai,
                      warp

executable functional-roastery-test
  main-is:            Test.hs
  other-modules:      RoundTrip
  hs-source-dirs:     backend/Test
  default-language:   Haskell2010
  default-extensions: DataKinds
                    , DeriveGeneric
                    , OverloadedStrings
                    , TypeFamilies
                    , TypeOperators
  ghc-options:        -O2 -Wall -Werror -threaded -ibackend
  build-depends:      QuickCheck

                    , base
                    , aeson
                    , bytestring
                    , esqueleto
                    , servant
                    , servant-server
                    , parsec
                    , persistent
                    , persistent-template
                    , persistent-sqlite
                    , persistent-postgresql
                    , pwstore-fast
                    , regex-posix
                    , string-conversions
                    , monad-logger
                    , stm
                    , text
                    , time
                    , transformers
                    , unordered-containers
                    , wai
                    , warp
